@@ -13,24 +13,29 @@ xml.network=true
 xml.cache=true
 
 #{{{ Plugin Manager Default Dimensions
-pluginmgr.x=100
-pluginmgr.y=100
+#pluginmgr.x=100
+#pluginmgr.y=100
 pluginmgr.height=300
 pluginmgr.width=400
 #}}}
 
 #{{{ Dirty Files Dialog Default Dimensions
-dirtyfiles.x=100
-dirtyfiles.y=100
+#dirtyfiles.x=100
+#dirtyfiles.y=100
 dirtyfiles.height=300
 dirtyfiles.width=500
 #}}}
 
 #{{{ Activity Log default dimensions
-activitylog.x=100
-activitylog.y=100
-activitylog.height=300
-activitylog.width=300
+#activitylog.x=100
+#activitylog.y=100
+activitylog.height=400
+activitylog.width=500
+#}}}
+
+#{{{ Document Options Dialog default dimensions
+Document.Options.width=300
+Document.Options.height=400
 #}}}
 
 #{{{ Metal control and menu font
